# pygamelib

./: pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-ci.yml
gamelib/ecs/: __init__.py  utils.py  waypoint.py
gamelib/ecs/modifiers/: modifier.py
gamelib/sprite/: spritesheet_grid.py
gamelib/tiles/: tiles.py  tmx.py
src/gamelib/ecs/: __init__.py  probe.py  rendering.py
src/gamelib/mgmt/: __init__.py
src/gamelib/tiles/: tiles.py
tests/: test_geometry.py  test_waypoint.py
